--- a/to-do-list-client/package.json
+++ b/to-do-list-client/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/error-message": "^2.0.1",
+    "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "@pbe/react-yandex-maps": "^1.2.5",
     "@reduxjs/toolkit": "^1.9.5",
